namespace BackupsNet.Server
{
    public enum BackupServerCommand : byte
    {
        Save = 0,
    }
}